@@ -3,6 +3,8 @@ Version 1.8.4
        fails if the file was deleted. (Sergey Azarkevich)
 - BUG: Issue #585: repo browser doesn't refresh directory
        browser when clicking "up a directory". (Stefan)
+- BUG: Issue #587: wrong colors in locatorbar
+       in TortoiseBlame. (Stefan)
 - NEW: Issue #586: Option to disable SVNParentPath
        handling in repo browser. (Stefan)
 
